2008-08-12  Jim Huang  <jserv.tw@gmail.com>

	* developers/make-new-release.sh: New file.  A simple and neat script
	for developers to prepare new release more carefully.

2008-08-12  Jim Huang  <jserv.tw@gmail.com>

	* src/downarticledlg.cpp: Fix missing <string.h> inclusion with
	older system headers.

2008-08-11  Jim Huang  <jserv.tw@gmail.com>

	* po/POTFILES.in,
	po/POTFILES.skip:  Translating the messages in source file
	src/docklet/eggtrayicon.c is useless.  Ignored.

	* po/zh_TW.po, po/zh_CN.po: Re-generated.

2008-08-11  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.cpp (CMainFrame::OnPreference): It should be able to
	work while hiding or showing tray icon immediately.

	* src/generalprefpage.cpp (CGeneralPrefPage::CGeneralPrefPage):
	Correct the brief description about tray icon switching.

	* po/zh_TW.po, po/zh_CN.po: Likewise.

2008-08-11  Jim Huang  <jserv.tw@gmail.com>

	* src/pcmanx_gtk2.cpp (main): Correctly hide tray icon according to
	the settings.

2008-08-10  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* Makefile.am: Fix the release problem of `./configure --enable-plugin`
	after `make dist-bzip2`.
	* Makefile.am,
	plugin/Makefile.am,
	plugin/data/Makefile.am,
	plugin/src/Makefile.am: Fix the release problem of `./configure
	--enable-plugin` after `make dist-bzip2`.

2008-08-09  Shih-Yuan Lee (FourDollars)  <fourdollars@gmail.com>

	* configure.ac: Bump to 0.3.8
	* NEWS: Adjust 0.3.8 to August.
	* po/POTFILES.in,
	po/POTFILES.skip: Fix some error when make distcheck.

2008-08-08  Jim Huang  <jserv.tw@gmail.com>

	* NEWS: updated to reflect recent changes.

2008-08-08  Jim Huang  <jserv.tw@gmail.com>

	* configure.ac: Introduced gcc attribute supports: const, noreturn,
	packed, and unused.

	* src/emoticondlg.cpp (CEmoticonDlg::OnDown) (CEmoticonDlg::OnAdd)
	(CEmoticonDlg::OnEdit) (CEmoticonDlg::OnRemove) (CEmoticonDlg::OnUp)
	(CEmoticonDlg::SaveEmoticon) (CEmoticonDlg::OnListRowActivated),